chore: stage remaining modified test files
All service unit tests pass (0 failures, 0 errors).
Pre-existing failures not caused by these changes:
- AIPredictiveControllerTest: 404 responses (controller routing issue)
- PaymentServiceTest.topUpWallet_VNPay: unsupported method in service
- SecurityIntegrationTest / VehicleWorkflowIntegrationTest: Spring
  ApplicationContext cannot load (missing H2/dev environment)